# NeoPhysIx.py

./: CMakeLists.txt  README.md  pybind_module.cpp
python/: NeoPhysIx.pyd  NeoPhysix.pyd  custom_math.py  graphics.py  main.py  text_renderer.py
python/shader/: fragment_shader.glsl  vertex_shader.glsl
src/: Control.cpp  Control.h  Environment.cpp  Environment.h  GlobalDefs.h  Graphics.cpp  Math.cpp  Math.h  PhysicsAPI.cpp  PhysicsAPI.h  PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h  Robot.h  main.cpp  pyMain.cpp  pyMain.h
src/robots/: CustomRobot.h  FourLeggedComparison.h  FourLeggedRobot.h  Humanoid.h  SixLeggedRobot.h  WheeledRobot.h
